--- a/src/Presentation/Nop.Web/Views/Shared/Components/Widget/Default.cshtml
+++ b/src/Presentation/Nop.Web/Views/Shared/Components/Widget/Default.cshtml
@@ -1,5 +1,5 @@
 ﻿@model List<RenderWidgetModel>
 @foreach (var widget in Model)
 {
-    @await Component.InvokeAsync(widget.WidgetViewComponentName, widget.WidgetViewComponentArguments);
+    @await Component.InvokeAsync(widget.WidgetViewComponentName, new {widgetZone = widget.WidgetZone, additionalData = widget.AdditionalData});
 }
